# object_recognition

./: .gitignore  README.md
object_recognition_skill_msgs/: CMakeLists.txt  package.xml
object_recognition_skill_msgs/action/: ObjectRecognitionSkill.action
object_recognition_skill_server/: CMakeLists.txt  package.xml
object_recognition_skill_server/docs/: tests.txt
object_recognition_skill_server/include/object_recognition_skill_server/: object_recognition_skill_server.h
object_recognition_skill_server/launch/: object_recognition.launch  object_recognition_configuration.launch  rviz.launch  tf_publisher.launch  tf_publisher_configuration.launch
object_recognition_skill_server/models/: README.md
object_recognition_skill_server/rviz/: rviz.rviz
object_recognition_skill_server/src/: object_recognition_skill_server.cpp  object_recognition_skill_server_node.cpp
object_recognition_skill_server/yaml/: configs.yaml  curvature_estimators.yaml  filters.yaml  filters_ambient_pointcloud_integration.yaml  filters_ambient_pointcloud_integration_random_sample.yaml  filters_ambient_pointcloud_integration_voxel_grid.yaml  filters_ambient_pointcloud_outlier_detection.yaml  filters_cad.yaml  filters_euclidean_clustering.yaml  filters_noise_removal.yaml  filters_pca.yaml  filters_plane_segmentation.yaml  filters_random_sample.yaml  filters_region_growing.yaml  filters_roi.yaml  filters_voxel_grid.yaml  initial_pose_estimators_feature_matchers.yaml  initial_pose_estimators_matchers.yaml  initial_pose_estimators_matchers_pca.yaml  initial_pose_estimators_pca_matchers.yaml  initial_pose_estimators_pca_matchers_with_base_link_axes_flip.yaml  initial_pose_estimators_point_matchers.yaml  initial_pose_estimators_point_matchers_with_normals.yaml  keypoint_detectors.yaml  normal_estimators.yaml  outlier_detectors.yaml  pose_recovery.yaml  pose_tracking.yaml  transformation_aligner.yaml  transformation_validators.yaml
