<?xml version="1.0"?>
<package format="2">
    <name>object_recognition_skill_server</name>
    <version>1.0.0</version>
    <description>ROS package for object recognition and 6 DoF pose estimation</description>
    <author email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</author>
    <maintainer email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>Boost</depend>

    <depend>actionlib</depend>
    <depend>dynamic_robot_localization</depend>
    <depend>geometry_msgs</depend>
    <depend>object_recognition_skill_msgs</depend>
    <depend>rosconsole</depend>
    <depend>roscpp</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>

</package>
